--- a/assets/styles/main.bootstrap.less
+++ b/assets/styles/main.bootstrap.less
@@ -31,8 +31,8 @@
 @import "../bootstrap/less/tables.less";
 
 // Components: common
- @import "../bootstrap/less/sprites.less";		// replaced with Font Awesome:
-// @import "../fonts/font-awesome.less";
+// @import "../bootstrap/less/sprites.less";		// replaced with Font Awesome:
+@import "../font-awesome/less/font-awesome.less";
 // @import "../bootstrap/less/dropdowns.less";
 // @import "../bootstrap/less/wells.less";
 // @import "../bootstrap/less/component-animations.less";
