Fitted less/html for Bootstrap 3

--- a/assets/styles/main.bootstrap-3.less
+++ b/assets/styles/main.bootstrap-3.less
@@ -64,3 +64,58 @@
 // Utility classes
 @import "../bootstrap-3.0.0-wip/less/utilities.less"; // Has to be last to override when necessary
 // @import "../bootstrap-3.0.0-wip/less/responsive-utilities.less";
+
+// ============================================================================================================
+//
+// GLOBAL VARIABLES
+//
+// ============================================================================================================
+
+// Colors
+
+@black: #222;
+@gray: #999;
+@lightgray: #bbb;
+@lightergray: #eee;
+@white: #F5F5F5;
+
+// Typographic defaults
+@default-fontsize: 18px;
+@default-lineheight: 1.4;
+@default-lineheight-header: 1.1;
+
+@small-fontsize: 14px;
+
+// Spacing + widths
+
+@border: 1px solid #e8e8e8;
+@margin: 10px;
+@pagemargin: 20px;
+
+// ============================================================================================================
+//
+// TYPOGRAPHY
+// Google fonts referenced in header.php
+//
+// ============================================================================================================
+
+body, div, p, input, button {
+	font-family: "Open Sans", sans-serif;
+	font-size: @default-fontsize;
+	line-height: @default-lineheight;
+	color: @black;
+}
+
+h1,h2,h3,h4,h5,h6 {
+	font-family: "Open Sans", sans-serif;
+	line-height: @default-lineheight-header;
+	color: @black;
+}
+
+
+// ============================================================================================================
+//
+// COMPONENTS
+//
+// ============================================================================================================
+
