updated to bootstrap rc2

--- a/assets/styles/main.bootstrap-3.less
+++ b/assets/styles/main.bootstrap-3.less
@@ -55,7 +55,7 @@
 @import "../bootstrap-3.0.0-wip/less/labels.less";
 @import "../bootstrap-3.0.0-wip/less/badges.less";
 @import "../bootstrap-3.0.0-wip/less/progress-bars.less";
-@import "../bootstrap-3.0.0-wip/less/accordion.less";
+// @import "../bootstrap-3.0.0-wip/less/accordion.less";
 @import "../bootstrap-3.0.0-wip/less/carousel.less";
 @import "../bootstrap-3.0.0-wip/less/jumbotron.less";
 
